--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,12 +35,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <service
-            android:name=".Location.LocationBackgroundHelper"
-            android:foregroundServiceType="location"
-            android:enabled="true"
-            android:exported="false"/>
-        <activity android:name=".LocationSearchesActivity"></activity>
+        <activity android:name=".Place.PlaceSearchesActivity"/>
     </application>
 
 </manifest>
