--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,6 +36,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".Place.PlaceSearchesActivity"/>
+        <activity android:name=".History.HistoryActivity"/>
     </application>
 
 </manifest>
