--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,6 +37,7 @@
         </activity>
         <activity android:name=".Place.PlaceSearchesActivity"/>
         <activity android:name=".History.HistoryActivity"/>
+        <activity android:name=".Bookmark.BookmarksActivity"/>
     </application>
 
 </manifest>
