--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AppCompat.Light.NoActionBar"
+        android:theme="@style/Theme.App.Default"
         tools:targetApi="31">
         <meta-data
             android:name="com.google.android.geo.API_KEY"
@@ -36,6 +36,7 @@
         <activity android:name=".Place.PlaceSearchesActivity"/>
         <activity android:name=".History.HistoryActivity"/>
         <activity android:name=".Bookmark.BookmarksActivity"/>
+        <activity android:name=".ThemesActivity"/>
     </application>
 
 </manifest>
